--- a/css/Новая папка/style.css
+++ b/css/Новая папка/style.css
@@ -1,21 +1,22 @@
 html,
 body {
-  min-width: 1146px;
-  min-height: 1750px;
   margin: 0;
   padding: 0;
 }
 
 body {
-  background-size: 1146px auto;
-	background-color:#849d8f;
 	font-size: 14px;
 	font-family: "Roboto","Arial", sans-serif;
-	font-weight: normal;
 	line-height: 28px;
 	color:#ffffff;
+	background:#849d8f url('../img/ice_main.png') no-repeat 60% 0%;
  }
- 
+.container {
+  width: 1200px;
+  padding: 0 27px;
+  margin: 0 auto;
+}
+
 .clearfix::after {
   content: "";
   display: table;
@@ -23,125 +24,101 @@ body {
 }
 
 .header-page {
-	margin-bottom: 0px;
 	padding-top:18px;
+	padding-bottom:0;
+	margin-bottom:0;
 	color:#ffffff;
 	font-weight: bold;
   line-height: 16px;
 	font-size:14px;
 }
-.container {
-  width: 1146px;
-  padding: 0 25px;
-  margin: 0 auto;
-}
 
 .header-page a{
 	color:#ffffff;
 	font-weight: bold;
-  line-height: 15px;
+  line-height: 18px;
 	font-size:16px;
 	text-decoration:none;
+	list-style-type:none;
 }
 
 .main-navigation {
 	float:left;
-	width: 850px; 
+	width: 560px; 
   height: 70px;
 }
-
-
-
-***
-.main-navigation .index-logo{
-	width:155px;
+.index-logo{
 	float:left;
-	padding:0px;
+	padding-left:0;
 	margin:0;
 }
-
-.main-navigation ul{
-	margin: 0;
-  padding: 0 15px;
-	padding-top:16px;
+.main-navigation ul {
+	float:right;
+	
 }
-
 .main-navigation ul li{
-display:inline;
-margin-right:30px;	
-}
-
-.user-block {
-	padding-top:16px;
-	float: right;
-	width: 265px;
-  min-height: 80px;
-	text-align:right;
-}
-
-.login-form{
-	display: none;
-}
-
-.index-logo {
-	width: 368px;
-  height: 204px;
-  margin-right: auto;
-  margin-left: auto;
+	display:inline;
+	padding-left:20px;
 	
 }
 
-.search-form,
-.login-form{
-	display:none;
-}
 
+.user-block {
+	float: right;
+	width: 265px;
+  min-height: 70px;
+	text-align:right;
+}
+.search-form,
+.login-form,
 .sub-menu{
 	display:none;
 }
 
+.user-block a{
+	display:inline-block;
+	padding:15px 25px;
+}
+.user-block a:first-child{
+	padding-left:0;
+	padding-right:0;
+}
 .user-info {
 	position:absolute;
-	right:100px;
+	right:70px;
 	top:60px;
 }
+.user-info p{
+	margin-right:30px;
+	margin-bottom:-10px;
+	padding-bottom:0;
+}
 .user-info a{
+	margin-top:0;
 	line-height:24px;
 	font-size:22px;
 }
-
-main{
-	padding:0;
-	margin-top:-110px;
-}
-
 .slider-bar{
-	background:url('../img/ice_main.png') no-repeat 100% 50%;
-	width:1045px;
-	height:881px;
-}
+	width:100%;
+	
+	
 
+
+}
 .slider-bar h3{
 	display:none;
 }
-
 .slider-item h2{
 	line-height:60px;
 	font-size:60px;
 }
-
 .slider-item{
-	position:relative;
-	width:680px;
-	text-align:center;
-	padding-top:360px;
-	padding-left:240px;
+	width:670px;
+	margin:300px auto;
+	margin-bottom:30px;
 }
-
 .slider-item a{
-	position:absolute;
-	top:560px;
-	left:430px;
+	
 	color:#ffffff;
 	text-decoration:none;
 	font-size:32px;
@@ -152,23 +129,25 @@ main{
   box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
 	border-radius:50px;
 	padding:20px 40px;
+	margin-left:200px;
 }
 
 
 
 .promotional-offers{
-	margin-top:-220px;
-	padding:0;
+	
 }
 .promotional-offers h3{
-	margin-top:-10px;
+	margin-top:0px;
 	font-size:35px;
 	line-height:41px;
+	margin-bottom:50px;
 }
 
 .promotional-offers p{
 	font-size:18px;
 	line-height:22px;
+	
 }
 .promotional-offers a{
 	color:#ffffff;
@@ -180,6 +159,7 @@ main{
 	border-radius:50px;
 	padding:10px 20px;
 	margin-left:350px;
+
 }
 
 .promotional-offers h2,
@@ -211,6 +191,8 @@ main{
 .promotional-item p{
 	width:510px;
 }
+
+
 
 
 
@@ -248,7 +230,7 @@ main{
 	text-align:center;
 }
 	
-.catalog-item::before{
+.hit::before{
   content:"";
   position:absolute;
   width:61px;
@@ -275,10 +257,20 @@ main{
 	line-height:30px;
 }
 .our-production p{
+	position:relative;
 	font-size:16px;
 	line-height:22px;
+	padding-left:40px;
 }
 
+.our-production p:first-child::before{
+content:"";
+position:absolute;
+background:url("../img/ice.png") no-repeat;
+top:0;
+left:0;
+}
+/*необходимо доделать картинки на псевдо-элементах*/
 .production-item{
 	width:540px;
 	float:left;
@@ -288,8 +280,166 @@ main{
 	float:right;
 
 }
-  
- 
+/*оформляем блог*/
+.blog{
+	color:#323232;
+	font-size:16px;
+	line-height:22px;
+	padding:0px;
+	margin-top:40px;
+	
+}
 
-	  
-  
+.blog h3{
+	display:none;
+}
+
+.blog-info{
+	float:left;
+	background:url("../img/strawberry_bg.jpg") no-repeat 0 0;
+	border-radius:15px;/*не закругляет углы у картинки*/
+	width:560px;
+	height:220px;
+	color:#323232;
+	font-size:16px;
+	line-height:22px;
+	padding:20px;
+}
+
+.blog-info a{
+	font-size:24px;
+	line-height:30px;
+}
+
+.blog-form{
+	position:relative;
+	float:right;
+	background-color:#ffffff;
+	border-radius:15px;
+	width:550px;
+	height:210px;
+	color:#323232;
+	font-size:16px;
+	line-height:22px;
+	padding:20px;
+	border-radius:15px;
+	width:530px;
+	height:180px;
+}
+
+
+.blog-form::after{
+	position:absolute;
+	content:"";
+	top:-5px;
+	left:-5px;
+	background:url("../img/mail_bg.jpg");
+	border-radius:15px;
+	width:580px;
+	height:230px;
+	z-index:-5;
+}
+
+.news-form .btn{
+	color:#ffffff;
+	line-height:24px;
+	font-size:18px;
+	font-weight:bold;
+	background-image:linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);/*доделать форму*/
+	box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
+	border-radius:50px;
+	padding:10px 20px;
+}
+
+.about-us h3{
+	display:none;
+}
+
+.about-us{
+	position:relative;
+	width:1200px;
+	height:430px;
+}
+
+.our-adress{
+	position:absolute;
+	top:60px;
+	right:30px;
+	width:290px;
+	height:304px;
+	background-color:#ffffff;
+	border-radius:15px;
+	color:#323232;
+	line-height:20px;
+	font-size:14px;
+	padding-top:30px;
+	padding-left:	25px;
+	
+}
+
+.our-adress b{
+	font-size:18px;
+	line-height:24px;
+	font-weight:bold;
+	margin-bottom:10px;
+	
+}
+
+.our-adress a{
+	text-decoration:none;
+	color:#323232;
+}
+
+.feedback-btn{
+	
+	background-image:linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);/*доделать форму*/
+	box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
+	border-radius:50px;
+	padding:10px 20px;
+	color:#ffffff !important;
+	font-size:18px;
+	line-height:24px;
+	font-weight:bold;
+}
+
+.feedback-form{
+	display:none;
+}
+
+.main-footer{
+	height:100px;
+	
+}
+
+.footer-social h3{
+	display:none;
+}
+
+.footer-social{
+	float:left;
+}
+.documentation-unit{
+	float:left;
+}
+
+.copyright{
+	float:right;
+}
+.social-btn{
+	width:32px;
+	height:32px;
+	padding-bottom:20px;
+	font-size:1px;
+}
+.social-tw::before{
+	background:url("../img/tw.png") no-repeat;
+}
+.social-inst{
+	background:url("../img/insta.png") no-repeat;
+}
+.social-fb{
+	background:url("../img/fb.png") no-repeat;
+}
+.social-vk{
+	background:url("../img/vk.png") no-repeat;
+}
