--- a/css/style.css
+++ b/css/style.css
@@ -1,242 +1,405 @@
+html,
+body{
+	width:1200px;
+}
+
+
+
 body {
 	font-size: 14px;
 	font-family: "Roboto","Arial", sans-serif;
-	line-height: 28px;
-	color:#ffffff;
+	line-height: 16px;
+	color: #ffffff;
 	background-color:#849d8f;
-
+	width:1200px;
+    margin: 0 auto;
+    padding:0;
  }
- 
 
-.container {
-  width: 1200px;
-  padding: 0 27px;
+body > input[type="radio"] {
+  display: none;
+}
+
+.global-content{
+    width:1146px;
+    margin-left: 27px;
+}
+
+
+.slider-controls{
+    position: absolute;
+    left:0;
+    top: 400px;
+}
+ .site-wrapper{
+	 background-repeat: #849d8f   no-repeat 78px -10px;
+     width:1045px;
+     height:881px;
+      transition: background-image 0.5s ease, background-color 0.5s ease;
+ }
+
+.site-wrapper::before,
+.site-wrapper::after {
+  content: "";
+
+  visibility: hidden;
+}
+
+.site-wrapper::before {
+  background-image: url("../img/ice_main1.png");
+}
+
+.site-wrapper::after {
+  background-image: url("../img/ice_main2.png");
+}
+
+.content-wrapper {
+  width: 900px;
   margin: 0 auto;
+  padding: 0 20px;
+}
+
+ .main-header{
+	 display:flex;
+     margin-top: 9px;
+     margin-left:0px;
+	 justify-content: space-between;
+ }
+
+.main-header a{
+    color: #ffffff;
+     font-size: 16px;
+    line-height: 18px;
+}
+
+.slider {
+  position: relative;
+
+  padding-top: 270px;
+
+  text-align: center;
+  color: #ffffff;
+}
+
+.slide {
+  display: none;
+}
+
+.slide-title {
+  width: 700px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  line-height: 60px;    
+  font-weight: 800;
+  font-size: 60px;
+}
+
+.slide-btn {
+  display: inline-block;
+  padding: 12px 50px;
+
+  font-weight: 600;
+  font-size: 31px;
+  line-height: 41px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+
+  background: #f26843;
+  background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+  border-radius: 100px;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+}
+
+.slide-btn:hover {
+  background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.slide-btn:active {
+  background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
+  background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
+  background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 25px;
+  left: 0;
+  z-index: 20;
+
+  font-size: 0;
 }
 
 
+.slider-controls label {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  margin-right: 8px;
 
-.header-page {
-	color:#ffffff;
-	font-weight: bold;
-  line-height: 16px;
-	font-size:14px;
-	z-index:10;
+  vertical-align: top;
+
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-.header-page a{
-	color:#ffffff;
-	font-weight: bold;
-  line-height: 18px;
-	font-size:16px;
-	text-decoration:none;
-	z-index:200;
-
+#btn-1:checked ~ .site-wrapper #slide1,
+#btn-2:checked ~ .site-wrapper #slide2,
+#btn-3:checked ~ .site-wrapper #slide3 {
+  display: block;
 }
 
-.main-navigation {
-	
-	width: 560px; 
-  height: 70px;
-}
-.header-layout{
-	display:flex;
-	justify-content: space-between;
-	flex-direction: row;
-	flex-wrap:wrap;
+#btn-1:checked ~ .site-wrapper {
+  background-color: #849d8f;
+  background-image: url("../img/ice_main.png");
 }
 
-.main-navigation {
-	display:flex;
-	}
-.index-logo{
-	margin-right:0;
-	padding-right:10px;
-
+#btn-2:checked ~ .site-wrapper {
+  background-color: #8996a6;
+  background-image: url("../img/ice_main1.png");
 }
+
+#btn-3:checked ~ .site-wrapper {
+  background-color: #9d8b84;
+  background-image: url("../img/ice_main2.png");
+}
+
+
+#btn-1:checked ~ .site-wrapper label[for="btn-1"],
+#btn-2:checked ~ .site-wrapper label[for="btn-2"],
+#btn-3:checked ~ .site-wrapper label[for="btn-3"] {
+  background-color: #ffffff;
+}
+
+ .main-navigation{
+	 width: 560px;
+	 padding: 0;
+	 margin: 0;
+	 margin-right:330px;
+  
+     
+	 display: flex;
+ }
+
 .main-navigation>ul{
-	
-	margin:0;
-	padding:0;
-	padding-top:20px;
-	padding-left:10px;
-	display:flex;
-	justify-content: space-between;
-	}
-.main-navigation>ul>li{
-	margin-right:30px;
-	list-style-type:none;
-	padding-right:0px;
-	position:relative;
-	}
-.main-navigation>ul>li:last-child{
-	margin-right:0;
-	}
-.main-navigation>ul>li:hover{
-	border:1px solid #323232;
-	border-radius:20px;								/*не знаю как уменьшить отступ у кнопок главного меню*/
-	padding:5px 15px;
-	background-color:#ffffff;
-	
-	
-}
-.main-navigation a{
-	text-decoration:underline;
-}
-.main-navigation >ul li:hover a{
-	
-	color:#323232;
-}
-	.main-navigation .sub-menu{
-	 position: absolute;
-	 top:45px;
-	 left:0;
+    position: relative;
     margin: 0;
     padding: 0;
-		width:150px;
+    padding-top: 12px;
+    margin-top: 5px;
+		padding-left:16px;
+    width: 360px;
     list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-navigation>ul>li{
+    height: 35px;
+		padding:0;
+    padding-top: 5px;
+		margin-right:5px;
+		padding-right:5px;
+	
+	}
+.main-navigation>ul>li:first-child{
+padding-left:10px;}
+.main-navigation>ul>li:last-child{
+padding-right: 0;
+margin-right: 0;}
+.main-navigation>ul>li:hover{
     background-color: #ffffff;
-		border-radius:5px;
-		box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
-		display:none;
-		
+    border: 1px solid #323232;
+    border-radius: 20px;
+    vertical-align: middle;
+    
 }
-.main-navigation .sub-menu li{
-	padding:0;
-	padding-bottom:15px;
-	
+.main-navigation>ul>li>a:hover{
+    color: #323232;
+    text-decoration: none;
+    
+}
 
+.main-navigation .sub-menu{
+    position: absolute;
+    list-style: none;
+    padding: 10px 0;  
+    margin: 0;
+    background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.4);
+    display: none;
+    
+}
+.sub-menu a{
+    color: #323232;
+    text-decoration: none;
 }
 
-.main-navigation .sub-menu a{
-	color: #323232;
-	font-weight:300;
-	text-decoration:none;
-	padding-left:20px;
-	
-	
-	
+.sub-menu li{
+    padding:0 20px;
 }
- .sub-menu li:first-child a{
-	font-weight:bold;
-	padding-bottom:0;
-	border-bottom:1px solid gray;
- }
+
+.sub-menu li:first-child{
+    font-weight: bold;
+    border-bottom: 1px solid #323232;
+}
 
 .main-navigation  ul> li:hover  .sub-menu{
-	
 	display:block;
 }
-.main-navigation .sub-menu li:hover{
-	background-color:#fbded7;
-}
-
-.user-block {
-	display:flex;
-	flex-wrap:wrap;
-	justify-content:space-between;
-	width: 265px;
-	padding-top:20px;
-	}
-.user-info {
-	padding-left:90px;
+.sub-menu li:hover{
+    background-color: #fbded7
 }
 
 
-.user-block a{
-	text-align:left;
-}
+
+.search-form,
+.login-form{
+	display:none;
+}/*Р’Р Р•РњР•РќРќРћ РџР РЇР§Р•Рњ Р”Р›РЇ РћР¤РћР РњР›Р•РќРРЇ*/
+
+
 
 .user-info a{
 	line-height:24px;
 	font-size:22px;
-}
-	.search-form,
- .login-form{
-	display:none;
+    text-decoration: none;
 }
 
 
-
-
-.slider-bar{
-	position:relative;
-	width:1045px;
-	height:600px;
-	z-index:-1;
+.user-block{
+    dispaly:flex;
+    padding-top:19px;
+    width:267px;
+    position:relative;
+    margin-bottom: 25px;
+    left:22px;
+    }
+.user-block .users{
+    background-color: #9db1a5;
+    text-decoration: none;
+    padding-left: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 10px;
+    border-radius: 25px;
 }
-.slider-info{
-	position:absolute;
-	bottom:40px;
-	left:100px;
+.user-block .user-search{
+    position: relative;
+    font-size: 0;
+    padding:0;
+    margin-left: 20px;
+    
+    width: 22px;
+    height: 22px;
+    background-color: #9db1a5;
+    
+   
+   }
+.user-block .user-search::before{
+    position:absolute;
+    content:"";
+    width:22px;
+    height:22px;
+    left: -10px;
+    top: -14px;
+    background: #9db1a5 url("../img/sprite.png") no-repeat -645px -9px;
+    border-radius: 50%;
+}
+
+.user-block .login{
+    position:relative;
+    margin-right: 0px;
+    margin-left: 10px;
+    padding-left: 50px;
+    top:1px;
+    left:5px;
+   
+     
+}
+    
+.user-block .login::before{
+    position:absolute;
+    content:"";
+    top:5px;
+    left:25px;
+    width:21px;
+    height:21px;
+    
+    background: #9db1a5 url("../img/sprite.png") no-repeat  -120px -10px;
+}
+
+
+.user-block .basket{
 	
+     position:relative;
+    padding-left:40px;
+    padding-right:40px;
+    top:1px;
+    left:17px;
 }
-.slider-item1{
-		background:#849d8f url('../img/ice_main.png') no-repeat 60% 0%;
-}
-.slider-item2{
-		background:#849d8f url('../img/ice_main1.png') no-repeat 60% 0%;
-		display:none;
-}
-.slider-item3{
-		background:#849d8f url('../img/ice_main2.png') no-repeat 60% 0%;
-		display:none;
+   
+
+
+.user-block .basket::before{
+    position:absolute;
+    content:"";
+    top:5px;
+    left:12px;
+    width:21px;
+    height:21px;
+   background: #9db1a5 url("../img/sprite.png") no-repeat  -10px -10px;
 }
 
-.slider-bar h3{
-	display:none;
-}
-.sliders h2{
-	margin-top:400px;
-	margin-left:100px;
-	line-height:60px;
-	font-size:60px;
-	text-align:center;
-}
-.wrapper{
-	position:relative;
-}
-.sliders{
-	position:absolute;
-	top:-120px;
-	left:0;
-	width:100%;
-	height:881px;
-	float:left;
-z-index:0;
-	margin-bottom:0px;
-
+.user-info{
+    display:block;
+    
+    padding-left: 1px;
+    position:relative;
+    left:22px;
+    top:-4px;
+    
 }
 
-.radio-slider{
-	position:absolute;
-	bottom:0;
-	z-index:1000;																																								/*ПЕРЕКЛЮЧАТЕЛИ*/
+.user-info p{
+    padding-left: 115px;
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 5px;
+    
 }
-.sliders a{
+
+.user-info a{
+    padding-left:98px;
+   font-size: 22px;
+    line-height: 24px;
+    
+}
+
+
+
+.slider-info a{
 	
 	color:#ffffff;
 	text-decoration:none;
 	font-size:32px;
 	line-height:44px;
-	background-image: -moz-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  background-image: -webkit-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  background-image: -ms-linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
-  box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
+	background-image:linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
+    box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
 	border-radius:50px;
 	padding:20px 40px;
 	margin-left:400px;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 .promotional-offers{
@@ -276,7 +439,6 @@ z-index:0;
 .promotional-left{
 	width:560px;
 	height:230px;
-	
 	background:url('../img/raspberry_bg.jpg') no-repeat ;
 	border-radius:15px;
 }
@@ -284,7 +446,6 @@ z-index:0;
 .promotional-right{
 	width:560px;
 	height:230px;
-	
 	background:url('../img/chocolate-bg.jpg') no-repeat ;
 	border-radius:15px;
 }
@@ -299,12 +460,9 @@ z-index:0;
 }
 
 
-
-
-
 .index-content{
 	padding-top:40px;
-	width:1200px;
+	width:1146px;
 	display:flex;
 	justify-content:space-between;
 }
@@ -378,23 +536,29 @@ background:url("../img/ice.png") no-repeat;
 top:0;
 left:0;
 }
-/*необходимо доделать картинки на псевдо-элементах*/
+/*РЅРµРѕР±С…РѕРґРёРјРѕ РґРѕРґРµР»Р°С‚СЊ РєР°СЂС‚РёРЅРєРё РЅР° РїСЃРµРІРґРѕ-СЌР»РµРјРµРЅС‚Р°С…*/
+.production-wrapper{
+	display:flex;
+	justify-content:space-between;
+}
+
 .production-item{
 	width:540px;
-	float:left;
+	
 	padding-left:10px;
 }
-.production-item:nth-child(2){
-	float:right;
 
 }
-/*оформляем блог*/
+/*РѕС„РѕСЂРјР»В¤РµРј Р±Р»РѕРі*/
 .blog{
+    display: flex;
+    justify-content: space-between;
 	color:#323232;
 	font-size:16px;
 	line-height:22px;
 	padding:0px;
 	margin-top:40px;
+	margin-bottom:300px;
 	
 }
 
@@ -403,9 +567,9 @@ left:0;
 }
 
 .blog-info{
-	float:left;
+	
 	background:url("../img/strawberry_bg.jpg") no-repeat 0 0;
-	border-radius:15px;/*не закругляет углы у картинки*/
+	border-radius:15px;/*РЅРµ Р·Р°РєСЂСѓРіР»В¤РµС‚ СѓРіР»С‹ Сѓ РєР°СЂС‚РёРЅРєРё*/
 	width:560px;
 	height:220px;
 	color:#323232;
@@ -421,7 +585,7 @@ left:0;
 
 .blog-form{
 	position:relative;
-	float:right;
+	
 	background-color:#ffffff;
 	border-radius:15px;
 	width:550px;
@@ -453,7 +617,7 @@ left:0;
 	line-height:24px;
 	font-size:18px;
 	font-weight:bold;
-	background-image:linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);/*доделать форму*/
+	background-image:linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);/*РґРѕРґРµР»Р°С‚СЊ С„РѕСЂРјСѓ*/
 	box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
 	border-radius:50px;
 	padding:10px 20px;
@@ -467,11 +631,12 @@ left:0;
 	position:relative;
 	width:1200px;
 	height:430px;
+	
 }
 
 .our-adress{
 	position:absolute;
-	top:300px;
+	top:65px;
 	right:30px;
 	width:290px;
 	height:304px;
@@ -500,7 +665,7 @@ left:0;
 
 .feedback-btn{
 	
-	background-image:linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);/*доделать форму*/
+	background-image:linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);/*РґРѕРґРµР»Р°С‚СЊ С„РѕСЂРјСѓ*/
 	box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
 	border-radius:50px;
 	padding:10px 20px;
@@ -514,44 +679,104 @@ left:0;
 	display:none;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 .main-footer{
-	height:100px;
-	display:flex;
-	
+    display: flex;
+    justify-content: space-between;
+    background-color: #849d8f;
+    padding: 10px; 
+    color: #ffffff; 
+    width: 100%; 
+    min-height: 100px;
 }
 
 .footer-social h3{
-	display:none;
+    display: none;
 }
 
-.footer-social{
-	width:230px;
-	
+.main-footer .footer-social{
+ display: flex;
+    justify-content: space-between;
 }
+.social{
+    font-size: 0;
+    width: 32px;
+    height: 32px;
+    margin-left: 15px;
+     background:#e6ebe9 url("../img/sprite.png") no-repeat;
+    border-radius:50%;
+}
+
+
+.social-tw {
+   
+    background-position:-920px -10px;
+}
+.social-inst  {
+  width: 32px;
+    height: 32px;
+    background-position: -544px -10px;
+}
+
+.social-fb {
+    width: 32px;
+    height: 32px;
+    background-position:  -160px -10px ;
+}
+.social-vk {
+  width: 32px;
+    height: 32px;
+    background-position: -1022px -10px;
+}
+
 .documentation-unit{
-	width:630px;
-	
+    width:360px;
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    height:40px;
+}
+
+.doc-item{
+    position: relative;
+    font-size: 13px;
+    line-height: 18px;
+    color:#ffffff;
+}
+
+.for-suppliers::before{
+    position:absolute;
+    left:-20px;
+    content:"";
+    width:15px;
+    height:13px;
+   background: #9db1a5 url("../img/sprite.png") no-repeat  -313px -10px;
 }
 
 .copyright{
-	width:230px;
-	
+    width:200px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
-.social-btn{
-	width:32px;
-	height:32px;
-	
-	
-}
-.social-tw::before{
-	background:url("../img/tw.png") no-repeat;
-}
-.social-inst{
-	background:url("../img/insta.png") no-repeat;
-}
-.social-fb{
-	background:url("../img/fb.png") no-repeat;
-}
-.social-vk{
-	background:url("../img/vk.png") no-repeat;
+
+.copyright .btn{
+    width:108px;
+    height: 38px;
+    font-size: 0;
+    background: #9db1a5 url("../img/sprite.png") no-repeat  -347px -10px;
+    
 }
